--- a/src/saar_website/templates/saar_website/produits/produit-7.html
+++ b/src/saar_website/templates/saar_website/produits/produit-7.html
@@ -31,13 +31,26 @@
            
 
             <div class="mx-auto mb-4" style="max-width: 900px;">
-                <h1 class="mb-2" style="color: red;">Les cautions émises par la SAAR :</h1>
+                <h1 class="mb-2" style="color: red;">LES CAUTIONS EMISES PAR LA SAAR </h1>
                 <ul style="font-size: 1.25em; color: black; text-align: justify;">
-                    <li>Caution pour soumission</li>
-                    <li>Caution d'avance de démarrage</li>
-                    <li>Caution de bonne fin</li>
-                    <li>Caution bancaires</li>                
+                    <li><strong>Caution pour soumission :</strong> couvre le maître d'ouvrage contre le retrait de l'offre, la non signature ou la non production d'une caution de bonne fin par le soumissionnaire d'un marché.</li>
+                    <li><strong>Caution d'avance de démarrage :</strong> assure le remboursement d'une avance consentie au cas où les travaux ne seraient pas exécutés par l'entrepreneur.</li>
+                    <li><strong>Caution de bonne fin :</strong> assure que les travaux seront menées conformément au contrat.</li>
+                    <li><strong>Caution de retenue de garantie :</strong> permet à l'entrepreneur de ne pas subir une retenue sur le montant qui doit lui être réglé par le maître d'ouvrage</li>
+                    <li><strong>Caution bancaires :</strong> pour bénéficier d'un prêt bancaire, certaines banques sollicitent de leurs clients la mise à disposition d'une garantie destinée à assurer le respect des remboursements.</li>                
                 </ul>
+            </div>
+
+
+            <div class="mx-auto mb-4" style="max-width: 900px;">
+                <h1 class="mb-2" style="color: red;">QUI PEUT SOUSCRIRE?</h1>
+                
+            </div>
+
+
+            <div class="mx-auto mb-4" style="max-width: 900px;">
+                <h1 class="mb-2" style="color: red;">COMMENT SOUSCRIRE A CE PRODUIT?</h1>
+                
             </div>
 
            
