--- a/src/saar_website/templates/saar_website/produits/produit-8.html
+++ b/src/saar_website/templates/saar_website/produits/produit-8.html
@@ -32,11 +32,13 @@
             </div> 
 
             <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">OBJET</h2><br/> 
+                {% comment %} <h2 class="mb-0" style="color: red;">OBJET</h2><br/>  {% endcomment %}
                 {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
-                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>L'assurance responsabilité civile vise à couvrir les conséquences financières des obligations légales de l'assuré en cas de dommages corporels, matériels et immatériels résultant d'accidents survenus dans le cadre de l'exploitation de l'entreprise, de l'industrie ou du commerce de l'assuré</li>
-                </ul>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">L'assurance responsabilité civile vise à couvrir les conséquences financières des obligations légales de l'assuré en cas de dommages corporels, matériels et immatériels résultant d'accidents survenus dans le cadre de l'exploitation de l'entreprise, de l'industrie ou du commerce de l'assuré</P>
+
             </div>
 
             <div class="mx-auto mb-5" style="max-width: 900px;" >
@@ -51,16 +53,20 @@
 
             <div class="mx-auto mb-5" style="max-width: 900px;">
                 <h2 class="mb-0" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
-                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Toute entreprise. Que vous soyez dans le commerce, l'industrie, les services ou toute autre activité, nous avons une solution adaptée à vos besoins.</li>
-                </ul>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">Toute entreprise. Que vous soyez dans le commerce, l'industrie, les services ou toute autre activité, nous avons une solution adaptée à vos besoins.</P>
+
             </div>
 
             <div class="mx-auto mb-5" style="max-width: 900px;">
                 <h2 class="mb-0" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
-                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel Bureau SAAR Assurances en Côte d'Ivoire.</li>
-                </ul>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel Bureau SAAR Assurances en Côte d'Ivoire.</P>
+
             </div>
 
 
@@ -72,11 +78,13 @@
             </div> 
 
             <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">OBJET</h2><br/> 
+                {% comment %} <h2 class="mb-0" style="color: red;">OBJET</h2><br/>  {% endcomment %}
                 {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
-                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>L'assuarance multirisque professionnelle est une assurance complète qui permet, avec ses différentes garanties, de couvrir les dégâts matériels subis par les biens assurés de votre entreprise (bâtiments, matériels, mobilier et aménagements, stock, fonds et divers).</li>
-                </ul>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">L'assuarance multirisque professionnelle est une assurance complète qui permet, avec ses différentes garanties, de couvrir les dégâts matériels subis par les biens assurés de votre entreprise (bâtiments, matériels, mobilier et aménagements, stock, fonds et divers)</P>
+
             </div>
 
             <div class="mx-auto mb-5" style="max-width: 900px;" >
@@ -98,16 +106,71 @@
 
             <div class="mx-auto mb-5" style="max-width: 900px;">
                 <h2 class="mb-0" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
-                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Toute entreprise ou PME peu importe le domaine d'activité.</li>
-                </ul>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">Toute <strong>entreprise ou PME</strong> peu importe le domaine d'activité.</P>
+
             </div>
 
             <div class="mx-auto mb-5" style="max-width: 900px;">
                 <h2 class="mb-0" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
-                <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Remplissez un questionnaire et fournissez les informations demandées pour obtenir une cotation. Rendez-vous dès maintenant dans un bureau de SAAR Assurances Côte d'Ivoire.</li>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">Remplissez un questionnaire et fournissez les informations demandées pour obtenir une cotation. Rendez-vous dès maintenant dans un bureau de SAAR Assurances Côte d'Ivoire.</P>
+
+            </div>
+
+
+            <div class="mx-auto text-center mb-5" style="max-width: 900px;">
+                <h1 class="section-title px-3" style = "color: black;">ASSURANCE TOUS RISQUES CHANTIERS</h1>
+            </div> 
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">"Avec <strong>TOUS RISQUES CHANTIERS</strong>, la SAAR couvre mes chantiers en cas d'accident". L'assurance tous risques chantiers (ou "TRC") permet au maître d'ouvrage, qu'il soit particulier ou professionnel, d'être couvert contre de très nombreux dommages qui pourraient survenir dans le cadre de travaux de construction ou de rénovation</P>
+                {% comment %} <h2 class="mb-0" style="color: red;">OBJET</h2><br/>  {% endcomment %}
+                {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li>"Avec <strong>TOUS RISQUES CHANTIERS</strong>, la SAAR couvre mes chantiers en cas d'accident"</li>
+                    
+                </ul> {% endcomment %}
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;" >
+                <h2 class="mb-0" style="color: red;">NOS GARANTIES</h2><br/> 
+               <ul style="font-size: 1.25em; color: black; text-align: justify;" >
+                   <li ><strong>Responsabilité Civil Exploitation </strong></li>
+                   <li><strong>Responsabilité Civile Professionnelle </strong></li>
+                   <li><strong>Responsabilité Civile après Travaux ou Livraison</strong></li>
+                   <li><strong>Défense et Recours</strong></li>
                 </ul>
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>Toute entreprise. Que vous soyez dans le commerce, l'industrie, les services ou toute autre activité, nous avons une solution adaptée à vos besoins.</li>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">Toute entreprise. Que vous soyez dans le commerce, l'industrie, les services ou toute autre activité, nous avons une solution adaptée à vos besoins. En cas de dommages, ce sont les entreprises qui interviennent <strong>sur le chantier</strong> qui sont à priori responsables du sinistre. Pour autant, c'est bel et bien le maître d'ouvrage <strong>doit souscrire l'assurance TRC.</strong></P>
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">QUELS AVANTAGES OFFRE L'ASSURANCE TRC AUX PROFESSIONNELS DE BTP</h2><br/> 
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel Bureau SAAR Assurances en Côte d'Ivoire.</li>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">Avec la garantie <strong>dommage</strong> en cours de travaux, les travaux de réparation sont pris en charge afin de vous permettre de poursuivre votre activité au plus vite. Cette garantie couvre également l'incendie, la tempête, le dégât des eaux et le vandalismeet, sous conditions, le vol.</P>
+
+            </div>
+
+            <div class="mx-auto mb-5" style="max-width: 900px;">
+                <h2 class="mb-0" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
+                {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
+                    <li><strong></strong>Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel Bureau SAAR Assurances en Côte d'Ivoire.</li>
+                </ul> {% endcomment %}
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel <strong>Bureau SAAR Assurances en Côte d'Ivoire.</strong></P>
+
             </div>
 
 
