--- a/src/saar_website/templates/saar_website/about.html
+++ b/src/saar_website/templates/saar_website/about.html
@@ -35,7 +35,7 @@
                     <h5 class="section-about-title pe-3">Qui somme nous ?</h5>
                     <h1 class="mb-4">Bienvenue à <span class="text-primary">SAAR Assurances</span></h1>
                     <p class="mb-4" style="text-align: justify; font-size: 1.25em; color: black;">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
-                    <p class="mb-4" style="text-align: justify; font-size: 1.25em; color: black;">Le directeur général actuel est <strong><a href="https://www.linkedin.com/company/saar-assurances-c%C3%B4te-d-ivoire/mycompany/" target="_blank" rel="noopener noreferrer">Monsieur KENGNE WAFO LOÏC ARMEL</a></strong>, poste occupé depuis le 25 Novembre 2021.</p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em; color: black;">Le directeur général actuel est <strong><a href="https://www.linkedin.com/in/lo%C3%AFc-armel-kengne-wafo-llb-mba-accpa-85236643/" target="_blank" rel="noopener noreferrer">Monsieur KENGNE WAFO LOÏC ARMEL</a></strong>, poste occupé depuis le 25 Novembre 2021.</p>
 
                     {% comment %} <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p> {% endcomment %}
                     <div class="row gy-2 gx-4 mb-4">
@@ -46,7 +46,7 @@
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Fondée en 1990</p>
                         </div> {% endcomment %}
                         <div class="col-sm-6">
-                            <p class="mb-0" style="font-size: 1.25em; color: black;"><i class="fa fa-arrow-right text-primary me-2"></i>Spécialisations : Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
+                            <p class="mb-0" style="font-size: 1.25em; color: black;"><i class="fa fa-arrow-right text-primary me-2"></i><strong>Spécialisations :</strong> Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
                         </div>
                         {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Latest Model Vehicles</p>
