--- a/src/saar_website/templates/saar_website/produits/produit-9.html
+++ b/src/saar_website/templates/saar_website/produits/produit-9.html
@@ -28,7 +28,7 @@
             <P style="font-size: 1.25em; color: black; text-align: justify;"> <strong>SAAR TAKAFUL</strong> est basée sur l'interdiction de trois éléments :</P>
             <ul style="font-size: 1.25em; color: black; text-align: justify;">
                 <li class="mb-4"><strong>Gharar :</strong> Interdiction de toutes les activités qui ont un élément d'incertitude exagéré, d'ambiguitéou ou de déception.</li>
-                <li class="mb-4"><strong>Matsir :</strong> Interdiction de toute forme d'arrangement où le droit des contractants dépend d'un évènement aléatoire.</li>
+                <li class="mb-4"><strong>Maysir :</strong> Interdiction de toute forme d'arrangement où le droit des contractants dépend d'un évènement aléatoire.</li>
                 <li class="mb-4"><strong>Al Riba :</strong> l'Islam interdit le paiement et la perception de l'intérêt.</li>
             </ul>
         </div>
