--- a/src/saar_website/templates/saar_website/produits/produit-4.html
+++ b/src/saar_website/templates/saar_website/produits/produit-4.html
@@ -19,10 +19,10 @@
 
  
       <!-- Services Start -->
-      <div class="container-fluid bg-white service">
-        <div class="container py-5">
+      <div class="mx-5 py-5">
+        {% comment %} <div class="container py-5"> {% endcomment %}
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 {% comment %} <h1 class="mb-0" style="color: red;">A PROPOS</h1> {% endcomment %}
                 <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu}}</P>
             </div>
@@ -31,7 +31,7 @@
             
            
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 <h1 class="mb-2" style="color: red;">NOS GARANTIES</h1>
                 <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong>Frais médicaux et hospitaliers :</strong> jusqu'à 30 000 euros.</li>
@@ -42,22 +42,22 @@
                 </ul>
             </div>
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 <h1 class="mb-2" style="color: red;">QUI PEUT SOUSCRIRE ?</h1>
-                <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Toute personne physique ou morale.</P>
+                <P class="" style="font-size: 1.25em; color: black; text-align: justify;">Toute personne physique ou morale.</P>
             </div>
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 <h1 class="mb-2" style="color: red;">COMMENT SOUSCRIRE A CE PRODUIT ?</h1>
-                <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Fournissez votre passeport et les informations demandées pour obtenir une cotation auprès de n'importe quel bureau <strong>SAAR Assurances</strong> en Côte d'Ivoire.</P>
+                <P style="font-size: 1.25em; color: black; text-align: justify;">Fournissez votre passeport et les informations demandées pour obtenir une cotation auprès de n'importe quel bureau <strong>SAAR Assurances</strong> en Côte d'Ivoire.</P>
             </div>
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 <h1 class="mb-2" style="color: red;">QUE FAIRE EN CAS DE SINISTRE ?</h1>
-                <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Contactez MAPFRE ASSISTANCIA France au <strong>+33 4 37 37 28 98</strong>.</P>
+                <P  style="font-size: 1.25em; color: black; text-align: justify;">Contactez MAPFRE ASSISTANCIA France au <strong>+33 4 37 37 28 98</strong>.</P>
             </div>
 
-        </div>
+        {% comment %} </div> {% endcomment %}
     </div>
     <!-- Services End -->
 
